--- a/reviews/20260118_143500_db_layer.md
+++ b/reviews/20260118_143500_db_layer.md
@@ -400,3 +400,110 @@ PRAGMA foreign_keys = ON;
 
 * `docs/tui-architecture.md` - System architecture overview
 * `docs/refactor-state.md` - State management refactoring notes
+
+---
+
+## Status: PARTIALLY RESOLVED
+
+**Verified 2026-01-18**
+
+### Resolved Issues
+- ✅ **Issue 2 (iteration key mismatch)**: Fixed - both schema.sql and `getCurrentIteration()` use `ralphCount`
+- ✅ **Issue 4 (Boolean casts)**: Fixed - vcs.ts uses `=== 1` pattern (lines 80, 88, 91-93)
+- ✅ **Issue 11 (Foreign keys)**: Fixed - `PRAGMA foreign_keys = ON` in `reactive-sqlite/database.ts:56`
+
+### Still Relevant Issues
+
+| # | Issue | Location | Impact |
+|---|-------|----------|--------|
+| 1 | Global `current*Id` context vars | `src/db/index.ts:161-174` | Race condition on parallel subagents |
+| 3 | State table not execution-scoped | `src/db/schema.sql:188-192` | Resumability broken, global state across runs |
+| 4 | Date type mismatch | `src/db/types.ts:12-14,36-38` | Runtime errors on `.getTime()` calls |
+| 5 | Large tool outputs lost | `src/db/tools.ts:57-61` | >1KB outputs unrecoverable (only summary stored) |
+
+---
+
+## Debugging Plan
+
+### Files to Investigate
+
+```
+src/db/index.ts          # Global context variables (lines 161-174)
+src/db/state.ts          # State module without execution scope
+src/db/schema.sql        # State table definition (lines 188-198)
+src/db/types.ts          # Date vs string type declarations
+src/db/tools.ts          # Large output handling (lines 52-62)
+src/db/memories.ts       # mapMemory for Date handling example
+```
+
+### Grep Patterns for Root Cause
+
+```bash
+# Find all current*Id usages (parallelism issue)
+grep -r "current.*Id\|getCurrentExecutionId\|setCurrentExecutionId" src/db/
+
+# Find Date type declarations that should be string
+grep -rn "created_at: Date\|updated_at: Date\|started_at.*Date" src/db/types.ts
+
+# Find places expecting Date methods on timestamps
+grep -rn "\.getTime()\|\.toISOString()" src/
+
+# Find output_path writes (should exist but don't)
+grep -rn "output_path\s*=" src/db/
+```
+
+### Test Commands to Reproduce
+
+```bash
+# 1. Parallel context collision (Issue 1)
+bun test src/db/*.test.ts --grep "parallel"
+
+# 2. State scope issue (Issue 3) - manual test
+# Start execution A, set state.phase = 'x'
+# Start execution B, check if state.phase visible
+
+# 3. Type mismatch (Issue 4)
+bun run -e "
+  const {createSmithersDB} = require('./src/db');
+  const db = createSmithersDB();
+  db.execution.start('test', 'test.tsx');
+  const mem = db.memories.store({category:'fact',key:'t',content:'x'});
+  const m = db.memories.get('fact','t');
+  console.log(m.created_at.getTime()); // Will throw
+"
+
+# 4. Large output loss (Issue 5)
+bun run -e "
+  const {createSmithersDB} = require('./src/db');
+  const db = createSmithersDB();
+  db.execution.start('test', 'test.tsx');
+  const agentId = db.agents.start('test');
+  const toolId = db.tools.start(agentId, 'Read', {});
+  db.tools.complete(toolId, 'x'.repeat(2000));
+  console.log(db.tools.getOutput(toolId)); // null - data lost
+"
+```
+
+### Proposed Fix Approach
+
+**Priority 1: Large tool output persistence (Issue 5)**
+1. In `tools.ts:complete()`, write large outputs to `.smithers/outputs/<id>.txt`
+2. Set `output_path` column
+3. Update `getOutput()` to read from file when `output_inline` is null
+
+**Priority 2: AsyncLocalStorage for context (Issue 1)**
+1. Create `src/db/context.ts` with AsyncLocalStorage
+2. Export `withExecutionContext(id, fn)` wrapper
+3. Migrate all `getCurrentExecutionId()` calls to use AsyncLocalStorage
+4. Deprecate global setter pattern
+
+**Priority 3: Execution-scoped state (Issue 3)**
+1. Alter schema: `ALTER TABLE state ADD COLUMN execution_id TEXT`
+2. Make `(execution_id, key)` composite primary key
+3. Update `StateModule` to require execution context
+4. Migrate existing data with default execution_id
+
+**Priority 4: Fix timestamp types (Issue 4)**
+1. Change all `Date` types in types.ts to `string`
+2. Add `parseDate()` helper if Date objects needed
+3. Update JSDoc to clarify ISO8601 string format
