--- a/reviews/20260118_143600_reactive_sqlite.md
+++ b/reviews/20260118_143600_reactive_sqlite.md
@@ -377,3 +377,28 @@ Current regexes to enhance:
 * Performance-sensitive: runs can accumulate thousands of rows
 * UI layer depends on subscription reactivity for live updates
 * Parallel subagents share same `ReactiveDatabase` instance (concurrency concern)
+
+---
+
+## Status: RESOLVED
+
+**Verified:** 2026-01-18
+
+### Fixed Issues
+
+**P0 `useQuery` invalidation bug** - FIXED
+- `src/reactive-sqlite/hooks/useQuery.ts` line 111 now calls `invalidateCache()` in the subscription callback
+- Cache is properly cleared before `onStoreChange()`, so `getSnapshot()` recomputes and returns new snapshot
+
+**P1 `REPLACE INTO` support** - FIXED  
+- `src/reactive-sqlite/parser.ts` lines 71-75 now include `replaceRegex` pattern
+- `REPLACE INTO table_name` statements properly invalidate subscriptions
+
+### Remaining Items (Not Blocking)
+
+**Transaction-aware invalidation** - NOT IMPLEMENTED
+- Invalidations still fire mid-transaction (before commit/rollback)
+- Could cause spurious rerenders if transaction rolls back
+- Acceptable if Smithers doesn't rely on transactional atomicity for UI updates
+
+**Other P1/P2 items** from original review (hook ergonomics, parser edge cases, reentrancy hardening) not verified but lower priority
