--- a/reviews/20260118_173804_b5c5cb9.md
+++ b/reviews/20260118_173804_b5c5cb9.md
@@ -61,3 +61,37 @@ The commit must be rejected. The author should perform the following steps:
         *   The numerous documentation, issue, and review files should be grouped logically into separate commits. For example, all the new `issues/*.md` files could go in one commit with a message like `docs: Add design documents for control flow components`. The `reviews/*.md` files could be another.
 
 By splitting the commit, each change can be reviewed, understood, and tracked independently, greatly improving the quality and maintainability of the project's history.
+
+## Debugging Plan
+
+### Issue: SQLite Database Files Tracked in Git
+
+**Files to investigate:**
+- `.gitignore` - missing `.smithers/data*` patterns
+- `.smithers/data`, `.smithers/data-shm`, `.smithers/data-wal` - currently tracked
+
+**Verification commands:**
+```bash
+# Confirm files are tracked
+git ls-files | grep ".smithers/data"
+
+# Check .gitignore coverage
+grep -E "\.smithers" .gitignore
+```
+
+**Fix approach:**
+1. Add to `.gitignore`:
+   ```
+   # Smithers local database
+   .smithers/data
+   .smithers/data-shm
+   .smithers/data-wal
+   ```
+
+2. Remove from git tracking (keep local files):
+   ```bash
+   git rm --cached .smithers/data .smithers/data-shm .smithers/data-wal
+   git commit -m "chore: stop tracking SQLite database files"
+   ```
+
+**Note:** The "non-atomic commit" and "uninformative message" issues are historical (commit b5c5cb9) and cannot be fixed retroactively without rewriting history. The actionable fix is removing the database files from tracking.
