--- a/reviews/20260118_174517_3d46b2f.md
+++ b/reviews/20260118_174517_3d46b2f.md
@@ -60,3 +60,40 @@ This is inconsistent with the new `issues/TEMPLATE.md`, which promotes using mar
    </blocks>
  </metadata>
 ```
+
+---
+
+## Debugging Plan
+
+### Files to Investigate
+- `issues/end-component.md` (lines 3-15) - metadata block with raw paths
+- `issues/TEMPLATE.md` - reference for correct format
+
+### Grep Patterns
+```bash
+# Find all raw path references in metadata blocks
+grep -n "issues/.*\.md" issues/*.md
+grep -n "src/.*\.tsx\?" issues/*.md
+```
+
+### Test Commands
+N/A - documentation-only change, no runtime tests needed.
+
+### Proposed Fix Approach
+
+1. Update `issues/end-component.md` metadata block to use markdown links:
+
+```diff
+<dependencies>
+-  - src/components/SmithersProvider.tsx
+-  - src/components/Ralph.tsx
++  - [SmithersProvider](../src/components/SmithersProvider.tsx)
++  - [Ralph](../src/components/Ralph.tsx)
+</dependencies>
+<blocks>
+-  - issues/github-actions-review-loop.md
++  - [GitHub Actions PR Review Loop](./github-actions-pr-review-loop.md)
+</blocks>
+```
+
+2. Verify other issue files follow TEMPLATE.md conventions (low priority, optional audit).
