--- a/reviews/20260118_150615_codebase_review.md
+++ b/reviews/20260118_150615_codebase_review.md
@@ -8,3 +8,136 @@
 - [minor] Drop `shell: true` and properly escape args in `src/commands/run.ts:57` and `src/commands/monitor.ts:65` to avoid path-with-spaces breakage and shell injection risk.
 - [minor] Use separate `TextDecoder` instances per stream to avoid decode state bleed. (`src/components/agents/claude-cli/executor.ts:57`, `src/components/agents/SmithersCLI.ts:262`)
 - [minor] Resolve stale core export TODO (restore/replace `executePlan` or remove reference). (`src/core/index.ts:5`)
+
+## Status: RELEVANT
+
+All issues verified still present in codebase.
+
+## Debugging Plan
+
+### 1. Critical: Step completion gating (Step.tsx:206-216)
+
+**Issue:** `useQueryValue` query uses `hasStartedRef.current && taskIdRef.current` evaluated at render time - refs flip after render in `useEffectOnValueChange`, query never re-evaluates.
+
+**Files:** `src/components/Step.tsx:206-216`
+
+**Grep patterns:**
+```sh
+grep -n "hasStartedRef.current && taskIdRef" src/components/Step.tsx
+grep -n "useQueryValue" src/components/Step.tsx
+```
+
+**Fix:** Use DB-backed "step_started_{stepId}" state key instead of refs. Query reacts to DB changes:
+```ts
+const stepStarted = useQueryValue(reactiveDb, 
+  "SELECT value FROM state WHERE key = ?", [`step_started_${stepId}`])
+// Use stepStarted instead of hasStartedRef.current
+```
+
+### 2. Critical: Phase/step index scoping (PhaseRegistry.tsx:58, Step.tsx:49-51)
+
+**Issue:** Keys `currentPhaseIndex` and `stepIndex_${phaseId}` are global, not scoped to executionId or Ralph iteration.
+
+**Files:**
+- `src/components/PhaseRegistry.tsx:58-72`
+- `src/components/Step.tsx:49-74`
+
+**Grep patterns:**
+```sh
+grep -n "currentPhaseIndex" src/components/PhaseRegistry.tsx
+grep -n "stepIndex_" src/components/Step.tsx
+```
+
+**Fix:** Scope keys with executionId + ralphCount:
+```ts
+const stateKey = `stepIndex_${executionId}_${ralphCount}_${phaseId}`
+```
+
+### 3. Major: Per-run state reset (SmithersProvider.tsx, state.ts:30-36)
+
+**Issue:** `INSERT OR IGNORE` / `ON CONFLICT DO UPDATE` preserves stale values across runs.
+
+**Files:**
+- `src/db/state.ts:30-46`
+- `src/components/SmithersProvider.tsx`
+
+**Grep patterns:**
+```sh
+grep -n "ralphCount\|currentPhaseIndex\|stepIndex" src/
+grep -rn "INSERT OR IGNORE\|ON CONFLICT" src/db/
+```
+
+**Fix:** Add `db.state.resetForExecution(executionId)` called at execution start, or use execution-scoped table.
+
+### 4. Major: useState in orchestration core
+
+**Files:**
+- `src/hooks/useHuman.ts:47` - `useState<string | null>`
+- `src/reactive-sqlite/hooks/useMutation.ts:71-72` - `useState(false)`, `useState<Error | null>`
+- `src/reactive-sqlite/hooks/shared.ts:12` - `useState(0)`
+
+**Grep pattern:**
+```sh
+grep -rn "useState" src/hooks/ src/reactive-sqlite/hooks/
+```
+
+**Fix:** Convert to `useRef` + DB-backed state for restartability.
+
+### 5. Major: Global singletons (SmithersProvider.tsx:18-29)
+
+**Files:** `src/components/SmithersProvider.tsx:18-62`
+
+**Grep pattern:**
+```sh
+grep -n "globalSmithersContext\|_orchestrationResolve\|_orchestrationReject" src/
+```
+
+**Fix:** Move to per-root WeakMap keyed by root instance, or pass via context.
+
+### 6. Minor: shell:true in spawn (run.ts:60, monitor.ts:67)
+
+**Files:**
+- `src/commands/run.ts:57-61`
+- `src/commands/monitor.ts:64-68`
+
+**Grep pattern:**
+```sh
+grep -rn "shell: true" src/commands/
+```
+
+**Fix:** Remove `shell: true`, pass args as array. Already doing that for command.
+
+### 7. Minor: Shared TextDecoder (claude-cli/executor.ts, SmithersCLI.ts:262)
+
+**Files:**
+- `src/components/agents/claude-cli/executor.ts` - single decoder for both streams
+- `src/components/agents/SmithersCLI.ts:262` - single decoder
+
+**Grep pattern:**
+```sh
+grep -rn "new TextDecoder" src/components/agents/
+```
+
+**Fix:** Create separate decoder per stream or use `{stream: true}` option.
+
+### 8. Minor: Stale core export (core/index.ts:5-6)
+
+**File:** `src/core/index.ts:5-6`
+
+**Fix:** Remove commented TODO and export, or implement replacement.
+
+### Test Commands
+
+```sh
+# Verify phase/step state pollution across runs
+bun test src/components/Step.test.tsx
+bun test src/components/PhaseRegistry.test.tsx
+
+# Run full orchestration test
+bun run test
+
+# Manual reproduction
+# 1. Run orchestration, let complete
+# 2. Re-run same orchestration without DB clear
+# 3. Observe phases/steps being skipped
+```
