--- a/reviews/20260118_143500_db_layer.md
+++ b/reviews/20260118_143500_db_layer.md
@@ -507,3 +507,17 @@ bun run -e "
 1. Change all `Date` types in types.ts to `string`
 2. Add `parseDate()` helper if Date objects needed
 3. Update JSDoc to clarify ISO8601 string format
+
+---
+
+## Status: STILL RELEVANT
+
+**Verified 2026-01-18 (re-checked)**
+
+All 4 remaining issues confirmed still present in codebase:
+- `src/db/index.ts:161-174` - global context vars unchanged
+- `src/db/schema.sql:188-192` - state table still lacks execution_id
+- `src/db/types.ts:12-14,36-38` - Date types not fixed to string
+- `src/db/tools.ts:57-61` - large outputs still dropped
+
+Debugging plan above remains valid and actionable.
