--- a/reviews/20260118_150615_codebase_review.md
+++ b/reviews/20260118_150615_codebase_review.md
@@ -141,3 +141,21 @@ bun run test
 # 2. Re-run same orchestration without DB clear
 # 3. Observe phases/steps being skipped
 ```
+
+---
+
+## Re-verification: 2026-01-18
+
+**Status: STILL RELEVANT**
+
+All issues confirmed present in current codebase:
+
+| Issue | File:Line | Verified |
+|-------|-----------|----------|
+| Step completion gating (ref in query) | Step.tsx:210-213 | ✓ `hasStartedRef.current && taskIdRef.current` still used |
+| Phase index not scoped | PhaseRegistry.tsx:61 | ✓ Key is `'currentPhaseIndex'` (global) |
+| Step index not scoped | Step.tsx:51 | ✓ Key is `stepIndex_${phaseId}` (no executionId) |
+| Global singletons | SmithersProvider.tsx:21,28-29 | ✓ `globalSmithersContext`, `_orchestrationResolve/Reject` |
+| useState in useHuman | useHuman.ts:47 | ✓ `useState<string | null>(null)` |
+
+Debugging plan above remains accurate.
