--- a/docs/installation.mdx
+++ b/docs/installation.mdx
@@ -89,7 +89,7 @@ Add JSX support to your `tsconfig.json`:
 {
   "compilerOptions": {
     "jsx": "preserve",
-    "jsxImportSource": "react",
+    "jsxImportSource": "smithers-orchestrator",
     "moduleResolution": "bundler",
     "target": "ESNext",
     "module": "ESNext"
