Refactor stacked-pr-merge to use SQLite-backed state
- Replace useRef state with db.state + useQueryValue pattern
- All workflow state persisted to SQLite state table
- State is reactive via useQueryValue subscriptions
- Each hook uses configurable statePrefix for isolation
- Follows CLAUDE.md guidance: NO useState, SQLite for durable state

--- a/docs/components/ralph.mdx
+++ b/docs/components/ralph.mdx
@@ -53,7 +53,7 @@ function MyComponent() {
   <Card title="SmithersProvider" icon="cube" href="/components/smithers-provider">
     The unified provider (use this instead)
   </Card>
-  <Card title="Orchestration Model" icon="sitemap" href="/concepts/orchestration">
+  <Card title="Ralph Wiggum Loop" icon="sitemap" href="/concepts/ralph-wiggum-loop">
     How the execution loop works
   </Card>
 </CardGroup>
