--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -206,7 +206,7 @@ smithers-orchestrator db query "SELECT * FROM agents ORDER BY started_at DESC LI
   <Card title="Claude Component" icon="cube" href="/components/claude">
     Learn the full Claude API
   </Card>
-  <Card title="State Management" icon="database" href="/concepts/state-management">
+  <Card title="Database Persistence" icon="database" href="/concepts/database-persistence">
     Master database persistence
   </Card>
   <Card title="Examples" icon="code" href="/examples/hello-world">
