--- a/docs/components/worktree.mdx
+++ b/docs/components/worktree.mdx
@@ -240,14 +240,13 @@ Both execute concurrently without interfering.
 <Steps>
   <Step title="Design Phase">
     Complete design with git utilities, context propagation, and agent integration.
-    [View issue](/issues/worktree-component.md)
   </Step>
 
-  <Step title="Git Utilities (Pending)">
-    Implement worktree management functions: listWorktrees, addWorktree, removeWorktree, branchExists, worktreeExists.
+  <Step title="Git Utilities">
+    Implemented worktree management functions: listWorktrees, addWorktree, removeWorktree, branchExists, worktreeExists.
   </Step>
 
-  <Step title="WorktreeContext (Pending)">
+  <Step title="WorktreeContext">
     Create context provider for cwd, branch, isWorktree propagation.
   </Step>
 
