--- a/docs/components/phase.mdx
+++ b/docs/components/phase.mdx
@@ -34,11 +34,18 @@ import { Phase } from "smithers-orchestrator";
 ## Multi-Phase Workflow
 
 ```tsx
-import { useState } from "react";
+import { useSmithers, useQueryValue } from "smithers-orchestrator";
 import { If } from "smithers-orchestrator";
 
 function FeatureWorkflow() {
-  const [phase, setPhase] = useState("research");
+  const { db } = useSmithers();
+  
+  const phase = useQueryValue<string>(
+    db.db,
+    "SELECT value FROM state WHERE key = 'phase'"
+  ) ?? "research";
+  
+  const setPhase = (p: string) => db.state.set('phase', p);
 
   return (
     <Ralph maxIterations={10}>
